--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -1,12 +1,9 @@
-<!-- src/app/core/components/navbar/navbar.component.html -->
-
-<!-- Barra de navegación -->
 <header class="bg-gray-800 text-white shadow-lg border-b-4">
-  <div class="container mx-auto flex justify-between items-center px-4 py-3">
+  <div class="container mx-auto flex justify-between items-center px-4">
     <!-- Logo -->
     <a
       href="/"
-      class="font-black text-2xl tracking-wider bg-yellow-500 p-2 text-gray-800 rounded"
+      class="font-black text-2xl tracking-wider bg-yellow-500 p-2 text-gray-800 rounded p-5"
       (click)="closeMobileMenu()"
     >
       NuevoLosLagos
