--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -6,7 +6,8 @@
     <div class="bg-gray-900 md:col-span-4 p-10 text-white">
       <p class="mt-4 text-sm leading-7 font-regular uppercase">
         Registro | @if (tipoRegistro==='proveedor') { Proveedor } @else if
-        (tipoRegistro==='empresa') { Industria 4.0 } @else { Persona }
+        (tipoRegistro==='empresa') { Industria 4.0 } @else { Startup -
+        Emprendedor }
       </p>
       <h3
         class="text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight"
@@ -21,11 +22,11 @@
         (tipoRegistro==='empresa') { Únete como empresa de la región de Los
         Lagos para aumentar tu visibilidad y competitividad en la Industria 4.0.
         Accede a recursos exclusivos, oportunidades de financiamiento y contacto
-        directo con proveedores e innovadores. } @else { Regístrate como usuario
-        profesional y explora oportunidades de desarrollo, empleo y formación en
-        el ecosistema de la Industria 4.0. Conecta con empresas, accede a cursos
-        en línea y mantente actualizado sobre las últimas tendencias del sector
-        }
+        directo con proveedores e innovadores. } @else { Regístrate como Startup
+        o Emprendedor, y explora oportunidades de desarrollo, empleo y formación
+        en el ecosistema de la Industria 4.0. Conecta con empresas, accede a
+        cursos en línea y mantente actualizado sobre las últimas tendencias del
+        sector }
       </p>
     </div>
     <form
