--- a/src/app/v2/modules/selection-register/selection-register.component.html
+++ b/src/app/v2/modules/selection-register/selection-register.component.html
@@ -171,10 +171,10 @@
           <!-- Contenido -->
           <p>
             Crear cuenta |
-            <strong>Personal</strong>
+            <strong>Startups y Emprendedores</strong>
           </p>
           <p>
-            Regístrate como usuario profesional y explora oportunidades de
+            Regístrate como Startup o Emprendedor, y explora oportunidades de
             desarrollo, empleo y formación en el ecosistema de la Industria 4.0.
             Conecta con empresas, accede a cursos en línea y mantente
             actualizado sobre las últimas tendencias del sector
