--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -12,7 +12,7 @@
       </div>
       <!-- Sección de logos de patrocinadores -->
       <div
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-12 mt-16"
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-12 mt-16"
       >
         <div class="flex items-center justify-center" key="Santo Tomás">
           <img
@@ -26,6 +26,14 @@
           <img
             src="assets/logos/logo_asimet.webp"
             alt="Asimet"
+            class="w-full max-w-xs h-auto object-contain"
+            loading="lazy"
+          />
+        </div>
+        <div class="flex items-center justify-center" key="centinela">
+          <img
+            src="assets/logos/logo_centinela.png"
+            alt="grupo-centinela"
             class="w-full max-w-xs h-auto object-contain"
             loading="lazy"
           />
