--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -174,6 +174,9 @@
           >
             Proyectos Destacados
           </a>
+          <a href="/buscador-startup" class="block px-4 py-2 hover:bg-gray-700">
+            Startup y Emprendedores
+          </a>
         </div>
       </div>
 
@@ -438,6 +441,14 @@
             (click)="closeMobileMenu()"
           >
             Proyectos Destacados
+          </a>
+
+          <a
+            href="/buscador-startup"
+            class="block px-3 py-2 rounded-md text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-300"
+            (click)="closeMobileMenu()"
+          >
+            Startup y Emprendedores
           </a>
         </div>
       </div>
