--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -163,7 +163,7 @@
           routerLink="/registro-persona"
           class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
         >
-          Registrate con una cuenta Personal
+          Registrate con una cuenta Startup o Emprendedor
           <svg
             class="w-5 h-5 ml-2 -mr-1"
             fill="currentColor"
@@ -225,8 +225,8 @@
               <p class="mt-3 sm:mt-4 text-base text-gray-600">
                 Haz clic en el botón <strong>Registrarse</strong> en la barra de
                 navegación y selecciona la opción
-                <strong>Cuenta personal</strong>. ¡Empieza ahora y conéctate con
-                la región!
+                <strong>Cuenta Startup o Emprendedor</strong>. ¡Empieza ahora y
+                conéctate con la región!
               </p>
             </div>
             <div>
