--- a/src/app/v2/modules/course-search/course-search.component.html
+++ b/src/app/v2/modules/course-search/course-search.component.html
@@ -409,9 +409,7 @@
           </span>
           }
         </p>
-        <p style="text-align: center">
-          <strong>Entidad:</strong> {{ courseModal.entidad }}
-        </p>
+        <p><strong>Entidad:</strong> {{ courseModal.entidad }}</p>
         <p><strong>Nivel:</strong> {{ courseModal.nivel }}</p>
         <p><strong>Idioma:</strong> {{ courseModal.idioma }}</p>
         <p><strong>Duración:</strong> {{ courseModal.duracion }}</p>
